--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
       }
 
       .section::after {
-        content: url("./border.svg");
+        content: "";
+        background-image: url("./border.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
         display: block;
         width: 100%;
         height: 240px;
         position: absolute;
-        bottom: -239px;
+        bottom: -238px;
         left: 0;
       }
 
