Change text, remove logo

--- a/index.html
+++ b/index.html
@@ -91,20 +91,27 @@
         aspect-ratio: 16 / 6;
         object-fit: cover;
       }
+
+      .logo {
+        font-size: 30px;
+        font-weight: 800;
+        color: #e51652;
+      }
     </style>
   </head>
   <body>
     <header>
-      <img src="./logo.png" alt="Zing" />
+      <p class="logo">LOGO</p>
       <button class="button-login">Sign in</button>
     </header>
     <main>
       <div class="section">
-        <h1 class="headline">Would you like happier employees?</h1>
+        <h1 class="headline">Lorem ipsum dolor sit amet?</h1>
         <p class="paragraph">
-          We offer a new approach to engaging employees, valued in today’s
-          workplace. How? By uniting teams and individuals through the joy of
-          shared experiences.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+          egestas, eros sed suscipit convallis, massa leo consequat lorem, eget
+          sollicitudin leo mauris sit amet neque. Donec consequat placerat dui,
+          et euismod velit dictum vitae.
         </p>
         <button class="button-discover">Discover</button>
       </div>
@@ -114,13 +121,15 @@
 
       <div class="section">
         <h2 class="headline">
-          Learning, bonding, performing<br />
-          and well-being, all in one place.
+          Donec quis eleifend neque.<br />
+          Quisque vulputate quam urna.
         </h2>
         <p class="paragraph">
-          Our digital platform of online experiences makes it easy and cost
-          effective for you to offer your employees access to one-of-a-kind
-          experiences that cover bonding, well-being, learning and performing,
+          Cras efficitur sapien id ipsum interdum euismod. Quisque vulputate
+          quam urna, in sollicitudin diam fringilla in. Suspendisse sagittis
+          hendrerit purus vitae suscipit. Phasellus tempor iaculis molestie.
+          Aliquam facilisis consequat neque, sed ornare est. Suspendisse sed
+          tristique neque.
         </p>
       </div>
     </main>
